Reset button added

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <button type="button" onclick="validate()">Calculate</button>
       </form>
       <h2 id="result"></h2>
+      <button id="reset-button">Reset</button>
     </div>
     <!-- <input type="text" /> -->
     <div class="card"></div>
